# COM_PortEventListener

./: .gitignore  CMakeLists.txt  EventListenerDebug.c  Main.exe - ショートカット.lnk  README.md
include/: BluetoothInitialize.h  CommonObjectControler.h  DownloadVBScript.h  EventListenerDebug.h  ExcuteEXE.h  ExcuteVBScript.h  SanitizeVBScript.h  SignalControl.h
src/: BluetoothInitialize.c  CommonObjectControler.c  DownloadVBScript.c  EventListener.c  EventListenerDebug.c  ExcuteEXE.c  ExcuteVBA.vbs  ExcuteVBscript.c  Main.c  RunAverage.vbs  RunCalcStdevPAboveCell.vbs  RunLinEstAboveCell.vbs  RunMacro1.vbs  SanitizeVBScript.c  SignalControl.c
